# fast_api

./: app.py  main.py  pyproject.toml
tests/: test_code.py
