[tool.poetry]
name = "codesetup"
version = "0.1.0"
description = "\"A fast api project\""
authors = ["a2704lok <alokkumarsingh230@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
